--- a/src/pages/home/mottoStyles.css
+++ b/src/pages/home/mottoStyles.css
@@ -16,3 +16,40 @@
     height: 450px;
 }
 
+.typewriter-wrapper {
+    width: 100%;
+    text-align: center;
+}
+
+@media (max-width: 900px) {
+    .div-motto {
+        margin-top: 80px;
+    }
+
+    .skin-img {
+        width: 100%;
+        height: auto;
+    }
+}
+
+@media (max-width: 600px) {
+    .skin-img {
+        max-width: 90%;
+        height: auto;
+    }
+
+    .div-motto {
+        margin-top: 80px;
+    }
+}
+
+@media (max-width: 400px) {
+    .skin-img {
+        max-width: 90%;
+        height: auto;
+    }
+
+    .div-motto {
+        margin-top: 60px;
+    }
+}
