--- a/src/components/Navbar/NavbarStyle.css
+++ b/src/components/Navbar/NavbarStyle.css
@@ -1,9 +1,18 @@
 @import url('https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&display=swap');
 
+nav, 
+nav *, 
+nav *::before, 
+nav *::after {
+  box-sizing: border-box;
+}
+
+
 body{
     margin: 0;
     padding: 0;
     background-color: white;
+    overflow-x: hidden;
 }
 
 nav {
@@ -11,11 +20,13 @@ nav {
     align-items: center;
     justify-content: space-between;
     background: #022B3A;
-    padding: 5px;
+    padding-right: 10px;
+    padding-left: 20px;
     height: 50px;
     box-shadow: 0 5px 15px rgba(0, 0, 0, 0.1);
     position: fixed;
-    width: 100%;
+    width: 100vw;
+    max-width: 100vw;
     top: 0;
     left: 0;
     z-index: 1000;
@@ -38,26 +49,26 @@ nav {
 .logo {
     width: 90px; 
     height: auto;
-    padding-left: 30%;
+    margin-left: 10px;
 }
 
 .content-container{
     padding-right: 2%;
 }
 
-#navbar-contents {
+.navbar-contents {
     display: flex;
     align-items: center;
     justify-content: center;
 }
 
-#navbar-contents li {
+.navbar-contents li {
     list-style: none;
     padding: 0 20px;
     position: relative;
 }
 
-#navbar-contents li a {
+.navbar-contents li a {
     text-decoration: none;
     font-size: 0.75rem;
     font-weight: 600;
@@ -68,11 +79,11 @@ nav {
     font-family: 'Inter', sans-serif;
 }
 
-#navbar-contents li a:hover{
+.navbar-contents li a:hover{
     color: rgb(115, 170, 218);
 }
 
-#navbar-contents li a::after {
+.navbar-contents li a::after {
     content: "";
     width: 0;
     height: 3px;
@@ -84,6 +95,62 @@ nav {
     transition: width 0.3s ease-in-out;
 }
 
-#navbar-contents li a:hover::after{
+.navbar-contents li a:hover::after{
     width: 60%;
 }
+
+.hamburger {
+  display: none;
+  font-size: 1.8rem;
+  background: none;
+  border: none;
+  color: aliceblue;
+  cursor: pointer;
+  transform: translateX(-20%);
+}
+
+@media (max-width: 768px) {
+  .hamburger {
+    display: block;
+    z-index: 1100;
+  }
+
+  .content-container {
+    display: none;
+    position: absolute;
+    top: 50px;
+    right: 0;
+    width: 100%;
+    background-color: #022B3A;
+    z-index: 999;
+  }
+
+  .content-container.open {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+  }
+
+  .navbar-contents {
+    flex-direction: column;
+    width: 100%;
+    padding: 10px;
+  }
+
+  .navbar-contents li {
+    width: 100%;
+    padding: 10px 20px;
+  }
+
+  .navbar-contents li a {
+    display: block;
+    width: 100%;
+    color: aliceblue;
+    text-decoration: none;
+  }
+
+  .logo {
+    padding-left: 10px;
+  }
+}
+
