--- a/src/components/Typewriter/TypewriterStyles.css
+++ b/src/components/Typewriter/TypewriterStyles.css
@@ -1,6 +1,6 @@
 .typewriter {
     font-family: "Poppins", sans-serif;
-    font-size: 1.9rem;
+    font-size: clamp(1.2rem, 4vw, 1.9rem);
     font-weight: 600;
     color: #000000;
     border-right: 2px solid #000000;
@@ -21,4 +21,25 @@
 .highlight {
     color: #0093C9;
     text-decoration: underline;
+}
+
+@media (max-width: 900px) {
+    .typewriter {
+        font-size: 1.6rem;
+        margin-bottom: 25px;
+    }
+}
+
+@media (max-width: 600px) {
+    .typewriter {
+        font-size: 1.2rem;
+        margin-bottom: 20px;
+    }
+}
+
+@media (max-width: 400px) {
+    .typewriter {
+        font-size: 1rem;
+        margin-bottom: 15px;
+    }
 }
