--- a/src/pages/about/AboutUsPage.css
+++ b/src/pages/about/AboutUsPage.css
@@ -4,7 +4,6 @@
     color: #333;
     display: flex;
     flex-direction: column;
-    min-height: 100vh;
 }
 
 .banner {
@@ -13,9 +12,15 @@
     overflow: hidden;
 }
 
-.banner img {
+.banner::after {
+    content: "";
+    position: absolute;
+    top: 0; left: 0; right: 0; bottom: 0;
     width: 100%;
-    display: block;
+    height: 100%;
+    background: #022b3a91;
+    z-index: 1;
+    pointer-events: none;
 }
 
 .banner-title {
@@ -25,11 +30,18 @@
     transform: translate(-50%, -50%);
     font-size: 48px;
     font-weight: 800;
-    color: #000;
+    color: #ffffff;
+    z-index: 2;
+}
+
+.banner img {
+    width: 100%;
+    display: block;
 }
 
 .banner-title span {
-    color: #1E90FF;
+    color: #229cff;
+    text-decoration: underline;
 }
 
 .content {
@@ -163,3 +175,116 @@
     margin-left: 280px;
 }
 
+@media (max-width: 1200px) {
+  .content {
+    flex-direction: column;
+    padding: 30px 5vw;
+    gap: 30px;
+    align-items: stretch;
+  }
+  .contact {
+    margin-left: 0;
+    min-width: 0;
+    margin-bottom: 30px;
+  }
+  .social {
+    max-width: 100%;
+    min-width: 0;
+  }
+  .email-info {
+    margin-left: 0;
+  }
+}
+
+@media (max-width: 900px) {
+  .banner-title {
+    font-size: 2rem;
+    padding: 0 10px;
+    text-align: center;
+  }
+  .content {
+    padding: 18px 2vw;
+    gap: 18px;
+  }
+  .contact h2,
+  .social h2 {
+    font-size: 1.2rem;
+  }
+  .contact p {
+    font-size: 1rem;
+    margin-bottom: 20px;
+  }
+  .info-content {
+    font-size: 1rem;
+  }
+  .social-box {
+    font-size: 0.95rem;
+    padding: 12px;
+    max-width: 50%;
+  }
+  .social-box div svg {
+    width: 28px;
+    height: 28px;
+  }
+}
+
+@media (max-width: 600px) {
+  .banner img{
+    height: 250px;
+    object-fit: cover;
+  }
+  .banner-title {
+    font-size: 2.2rem;
+    padding: 0 4px;
+  }
+  .content {
+    padding: 10px 20px;
+    gap: 10px;
+  }
+
+  .contact h2{
+    font-size: 1.5rem;
+  }
+
+  .contact-info{
+    padding-top: 10%;
+    padding-bottom: 10%;
+  }
+
+  .contact,
+  .social {
+    padding: 0 6px;;
+  }
+
+  .social h2 {
+    font-size: 1.5rem;
+  }
+
+  .social{
+    padding-bottom: 10%;
+    width: 80%;
+  }
+}
+
+@media (max-width: 400px) {
+
+  .banner-title {
+    font-size: 1rem;
+    padding: 0 2px;
+  }
+  .contact h2,
+  .social h2 {
+    font-size: 1rem;
+  }
+  .contact p {
+    font-size: 0.9rem;
+    margin-bottom: 15px;
+  }
+  .info-content {
+    font-size: 0.9rem;
+  }
+  .social-box {
+    font-size: 0.85rem;
+    padding: 10px;
+  }
+}
